<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/homeToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:fontFamily="sans-serif"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        android:src="@drawable/snookertable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        `<LinearLayout
            android:id="@+id/bannerContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/homeToolbar"
            android:background="@drawable/text_background">
            <ImageView
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:srcCompat="@drawable/banner" />
        </LinearLayout>`


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@id/bannerContainer"
        app:layout_constraintVertical_bias="0.36"
        tools:layout_editor_absoluteX="-10dp"
        android:background="@drawable/text_background">


        <TextView
            android:id="@+id/enterPlayerNames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_background"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/GameOn"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:paddingRight="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/_white" />

            <EditText
                android:id="@+id/p1name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_border"
                android:ems="12"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/name_player_one"
                android:inputType="textPersonName"
                android:maxLength="10"
                android:padding="8dp"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textCursorDrawable="@null"
                android:textStyle="italic" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:paddingLeft="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/red_ball" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtVs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/vs"
            android:textColor="@color/colorWhite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:paddingRight="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/red_ball" />

            <EditText
                android:id="@+id/p2name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_border"
                android:ems="12"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/name_player_two"
                android:inputType="textPersonName"
                android:maxLength="10"
                android:padding="8dp"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textCursorDrawable="@null"
                android:textStyle="italic" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:paddingLeft="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/_white" />


        </LinearLayout>

        <TextView
            android:id="@+id/txtGameOn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/PlayerOneBreak"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"
            android:fontFamily="@font/roboto_medium"
            android:onClick="StartGame"
            android:text="@string/start"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/savedGamesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"
            android:fontFamily="@font/roboto_medium"
            android:onClick="SavedGames"
            android:text="@string/resume"
            android:textColor="@color/colorYellow" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/logowhite" />

</androidx.constraintlayout.widget.ConstraintLayout>